@@ -1,5 +1,4 @@
 Dist-Zilla-MintingProfile-AlienBuild-*
 /.build/
 *.swp
-
-
+/.tmp
