@@ -54,7 +54,7 @@ package Alien::Build::Wizard::Chrome {
     die "unexpected default: @{[ $default->@* ]} (expected $expected_default)" if defined $expected_default && $expected_default ne $default->[0];
     my $answer = $choose{$prompt}->[0] // $default->[0];
     Test2::V0::note(" > $answer");
-    $answer;
+    ref $answer ? @$answer : $answer;
   }
 
   sub say ($self, $string) {
